feat : 서비스명을 CAMFIA로 변경

--- a/frontend/src/common/css/common.css
+++ b/frontend/src/common/css/common.css
@@ -18,7 +18,7 @@
     background-size: cover;
 }
 
-.ssafia-logo:hover {
+.camfia-logo:hover {
     cursor: pointer;
     animation-duration: 0.5s;
     animation-name: pulsate-bck;
