feat : 닉네임 입력창에서 미리 카메라와 오디오 테스트할 수 있는 기능 추가

--- a/frontend/src/views/nickname/nickname.css
+++ b/frontend/src/views/nickname/nickname.css
@@ -1,3 +1,10 @@
+#testing-video {
+    /* Mirror mode */
+    transform: rotateY(180deg);
+    -webkit-transform:rotateY(180deg); /* Safari and Chrome */
+    -moz-transform:rotateY(180deg); /* Firefox */
+}
+
 #nickname-logo {
     margin-top: 5rem;
     animation-duration: 1s;
